hydraql-dsl/src/main/java/com/hydraql/dsl/antlr/HBaseSQLParser.java
// Generated from HBaseSQL.g4 by ANTLR 4.5.1

package com.hydraql.dsl.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HBaseSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, LR_BRACKET=5, RR_BRACKET=6, COMMA=7, SEMICOLON=8, 
		D_QUO=9, EQ=10, NOTEQ=11, GREATER=12, GREATEREQUAL=13, LESS=14, LESSEQUAL=15, 
		PLUS=16, MINUS=17, ASTERISK=18, SLASH=19, MOD=20, IS=21, NOTMATCH=22, 
		MATCH=23, BETWEEN=24, MISSING=25, LIMIT=26, TS=27, STARTTS=28, ENDTS=29, 
		CREATE=30, DROP=31, SHOW=32, VIRTUAL=33, TABLE=34, TABLES=35, WITH=36, 
		PROPERTIES=37, NULLABLE=38, INSERT=39, INTO=40, VALUES=41, SELECT=42, 
		UPDATE=43, SET=44, DELETE=45, FROM=46, COLUMNFAMILY=47, WHERE=48, AND=49, 
		OR=50, IN=51, LIKE=52, NULL=53, NOT=54, INTEGER=55, ROWKEY=56, ISROWKEY=57, 
		STARTKEY=58, ENDKEY=59, MAXVERSION=60, ID=61, STRING=62, SPACE=63, COMMENT_INPUT=64, 
		LINE_COMMENT=65;
	public static final int
		RULE_query = 0, RULE_createTableStatement = 1, RULE_dropTableStatement = 2, 
		RULE_showTableStatement = 3, RULE_showCreateTableStatement = 4, RULE_tableName = 5, 
		RULE_fields = 6, RULE_field = 7, RULE_fieldName = 8, RULE_fieldType = 9, 
		RULE_properties = 10, RULE_keyValue = 11, RULE_column = 12, RULE_funcname = 13, 
		RULE_selectColList = 14, RULE_columnList = 15, RULE_insertStatement = 16, 
		RULE_multiValueList = 17, RULE_valueList = 18, RULE_value = 19, RULE_selectStatement = 20, 
		RULE_deleteStatement = 21, RULE_rowKeyRangeExp = 22, RULE_rowKeyExp = 23, 
		RULE_funcParamsList = 24, RULE_funcCol = 25, RULE_gtOper = 26, RULE_leOper = 27, 
		RULE_tsRange = 28, RULE_constant = 29, RULE_constantList = 30, RULE_var = 31, 
		RULE_varList = 32, RULE_multiVersionExp = 33, RULE_maxVersionExp = 34, 
		RULE_integer = 35, RULE_tsExp = 36, RULE_timestamp = 37, RULE_wherec = 38, 
		RULE_conditionc = 39, RULE_limitExp = 40;
	public static final String[] ruleNames = {
		"query", "createTableStatement", "dropTableStatement", "showTableStatement", 
		"showCreateTableStatement", "tableName", "fields", "field", "fieldName", 
		"fieldType", "properties", "keyValue", "column", "funcname", "selectColList", 
		"columnList", "insertStatement", "multiValueList", "valueList", "value", 
		"selectStatement", "deleteStatement", "rowKeyRangeExp", "rowKeyExp", "funcParamsList", 
		"funcCol", "gtOper", "leOper", "tsRange", "constant", "constantList", 
		"var", "varList", "multiVersionExp", "maxVersionExp", "integer", "tsExp", 
		"timestamp", "wherec", "conditionc", "limitExp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'`'", "'''", "'${'", "'}'", "'('", "')'", "','", "';'", "'\"'", 
		"'='", "'!='", "'>'", "'>='", "'<'", "'<='", "'+'", "'-'", "'*'", "'/'", 
		"'%'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "LR_BRACKET", "RR_BRACKET", "COMMA", "SEMICOLON", 
		"D_QUO", "EQ", "NOTEQ", "GREATER", "GREATEREQUAL", "LESS", "LESSEQUAL", 
		"PLUS", "MINUS", "ASTERISK", "SLASH", "MOD", "IS", "NOTMATCH", "MATCH", 
		"BETWEEN", "MISSING", "LIMIT", "TS", "STARTTS", "ENDTS", "CREATE", "DROP", 
		"SHOW", "VIRTUAL", "TABLE", "TABLES", "WITH", "PROPERTIES", "NULLABLE", 
		"INSERT", "INTO", "VALUES", "SELECT", "UPDATE", "SET", "DELETE", "FROM", 
		"COLUMNFAMILY", "WHERE", "AND", "OR", "IN", "LIKE", "NULL", "NOT", "INTEGER", 
		"ROWKEY", "ISROWKEY", "STARTKEY", "ENDKEY", "MAXVERSION", "ID", "STRING", 
		"SPACE", "COMMENT_INPUT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HBaseSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HBaseSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public CreateTableStatementContext createTableStatement() {
			return getRuleContext(CreateTableStatementContext.class,0);
		}
		public DropTableStatementContext dropTableStatement() {
			return getRuleContext(DropTableStatementContext.class,0);
		}
		public ShowTableStatementContext showTableStatement() {
			return getRuleContext(ShowTableStatementContext.class,0);
		}
		public ShowCreateTableStatementContext showCreateTableStatement() {
			return getRuleContext(ShowCreateTableStatementContext.class,0);
		}
		public InsertStatementContext insertStatement() {
			return getRuleContext(InsertStatementContext.class,0);
		}
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			setState(89);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				createTableStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				dropTableStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				showTableStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				showCreateTableStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				insertStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(87);
				selectStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(88);
				deleteStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(HBaseSQLParser.CREATE, 0); }
		public TerminalNode VIRTUAL() { return getToken(HBaseSQLParser.VIRTUAL, 0); }
		public TerminalNode TABLE() { return getToken(HBaseSQLParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public FieldsContext fields() {
			return getRuleContext(FieldsContext.class,0);
		}
		public TerminalNode WITH() { return getToken(HBaseSQLParser.WITH, 0); }
		public TerminalNode PROPERTIES() { return getToken(HBaseSQLParser.PROPERTIES, 0); }
		public PropertiesContext properties() {
			return getRuleContext(PropertiesContext.class,0);
		}
		public CreateTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitCreateTableStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableStatementContext createTableStatement() throws RecognitionException {
		CreateTableStatementContext _localctx = new CreateTableStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_createTableStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(CREATE);
			setState(92);
			match(VIRTUAL);
			setState(93);
			match(TABLE);
			setState(94);
			tableName();
			setState(95);
			match(LR_BRACKET);
			setState(96);
			fields();
			setState(97);
			match(RR_BRACKET);
			setState(104);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(98);
				match(WITH);
				setState(99);
				match(PROPERTIES);
				setState(100);
				match(LR_BRACKET);
				setState(101);
				properties();
				setState(102);
				match(RR_BRACKET);
				}
			}

			setState(107);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(106);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropTableStatementContext extends ParserRuleContext {
		public TerminalNode DROP() { return getToken(HBaseSQLParser.DROP, 0); }
		public TerminalNode VIRTUAL() { return getToken(HBaseSQLParser.VIRTUAL, 0); }
		public TerminalNode TABLE() { return getToken(HBaseSQLParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public DropTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dropTableStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitDropTableStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DropTableStatementContext dropTableStatement() throws RecognitionException {
		DropTableStatementContext _localctx = new DropTableStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dropTableStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(DROP);
			setState(110);
			match(VIRTUAL);
			setState(111);
			match(TABLE);
			setState(112);
			tableName();
			setState(114);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(113);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowTableStatementContext extends ParserRuleContext {
		public TerminalNode SHOW() { return getToken(HBaseSQLParser.SHOW, 0); }
		public TerminalNode VIRTUAL() { return getToken(HBaseSQLParser.VIRTUAL, 0); }
		public TerminalNode TABLES() { return getToken(HBaseSQLParser.TABLES, 0); }
		public ShowTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_showTableStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitShowTableStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShowTableStatementContext showTableStatement() throws RecognitionException {
		ShowTableStatementContext _localctx = new ShowTableStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_showTableStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(SHOW);
			setState(117);
			match(VIRTUAL);
			setState(118);
			match(TABLES);
			setState(120);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(119);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowCreateTableStatementContext extends ParserRuleContext {
		public TerminalNode SHOW() { return getToken(HBaseSQLParser.SHOW, 0); }
		public TerminalNode CREATE() { return getToken(HBaseSQLParser.CREATE, 0); }
		public TerminalNode VIRTUAL() { return getToken(HBaseSQLParser.VIRTUAL, 0); }
		public TerminalNode TABLE() { return getToken(HBaseSQLParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public ShowCreateTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_showCreateTableStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitShowCreateTableStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShowCreateTableStatementContext showCreateTableStatement() throws RecognitionException {
		ShowCreateTableStatementContext _localctx = new ShowCreateTableStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_showCreateTableStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(SHOW);
			setState(123);
			match(CREATE);
			setState(124);
			match(VIRTUAL);
			setState(125);
			match(TABLE);
			setState(126);
			tableName();
			setState(128);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(127);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HBaseSQLParser.ID, 0); }
		public TableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitTableName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableNameContext tableName() throws RecognitionException {
		TableNameContext _localctx = new TableNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tableName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldsContext extends ParserRuleContext {
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitFields(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldsContext fields() throws RecognitionException {
		FieldsContext _localctx = new FieldsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			field();
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(133);
				match(COMMA);
				setState(134);
				field();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public FieldNameContext fieldName() {
			return getRuleContext(FieldNameContext.class,0);
		}
		public FieldTypeContext fieldType() {
			return getRuleContext(FieldTypeContext.class,0);
		}
		public TerminalNode ISROWKEY() { return getToken(HBaseSQLParser.ISROWKEY, 0); }
		public TerminalNode NULLABLE() { return getToken(HBaseSQLParser.NULLABLE, 0); }
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			fieldName();
			setState(141);
			fieldType();
			setState(143);
			_la = _input.LA(1);
			if (_la==ISROWKEY) {
				{
				setState(142);
				match(ISROWKEY);
				}
			}

			setState(146);
			_la = _input.LA(1);
			if (_la==NULLABLE) {
				{
				setState(145);
				match(NULLABLE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HBaseSQLParser.ID, 0); }
		public FieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitFieldName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldNameContext fieldName() throws RecognitionException {
		FieldNameContext _localctx = new FieldNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fieldName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldTypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HBaseSQLParser.ID, 0); }
		public FieldTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitFieldType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldTypeContext fieldType() throws RecognitionException {
		FieldTypeContext _localctx = new FieldTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fieldType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertiesContext extends ParserRuleContext {
		public List<KeyValueContext> keyValue() {
			return getRuleContexts(KeyValueContext.class);
		}
		public KeyValueContext keyValue(int i) {
			return getRuleContext(KeyValueContext.class,i);
		}
		public PropertiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_properties; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitProperties(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertiesContext properties() throws RecognitionException {
		PropertiesContext _localctx = new PropertiesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_properties);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			keyValue();
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(153);
				match(COMMA);
				setState(154);
				keyValue();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyValueContext extends ParserRuleContext {
		public List<TerminalNode> D_QUO() { return getTokens(HBaseSQLParser.D_QUO); }
		public TerminalNode D_QUO(int i) {
			return getToken(HBaseSQLParser.D_QUO, i);
		}
		public List<TerminalNode> ID() { return getTokens(HBaseSQLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HBaseSQLParser.ID, i);
		}
		public KeyValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitKeyValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KeyValueContext keyValue() throws RecognitionException {
		KeyValueContext _localctx = new KeyValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_keyValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(D_QUO);
			setState(161);
			match(ID);
			setState(162);
			match(D_QUO);
			setState(163);
			match(EQ);
			setState(164);
			match(D_QUO);
			setState(165);
			match(ID);
			setState(166);
			match(D_QUO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
